<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.qrpublic.apartment</groupId>
    <artifactId>publiclink</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>publiclink</name>
    <modules>
        <module>publiclink-app</module>
        <!--        <module>authen-authorisation</module>-->
        <module>apiGateway</module>
        <module>adapter</module>
        <module>user</module>
    </modules>
    <packaging>pom</packaging>
    <description>Demo project for Spring Boot</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>25</java.version>
        <spring-cloud.version>2025.0.2</spring-cloud.version>
        <lombok.version>1.18.40</lombok.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <jwt.version>0.11.5</jwt.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.32</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.5.32</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>2.0.17</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <!--                        <release>${java.version}</release>-->
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <!--	<profiles>-->
    <!--		<profile>-->
    <!--			<id>dev</id>-->
    <!--			<activation>-->
    <!--				<activeByDefault>true</activeByDefault>-->
    <!--			</activation>-->
    <!--			<build>-->
    <!--				<finalName>publiclink</finalName>-->
    <!--                <pluginManagement>-->
    <!--				<plugins>-->
    <!--					<plugin>-->
    <!--						<groupId>org.springframework.boot</groupId>-->
    <!--						<artifactId>spring-boot-maven-plugin</artifactId>-->
    <!--					</plugin>-->
    <!--				</plugins>-->
    <!--                </pluginManagement>-->
    <!--			</build>-->
    <!--			<properties>-->
    <!--            <activeProfile>dev</activeProfile>-->
    <!--        </properties>-->
    <!--		</profile>-->

    <!--		<profile>-->
    <!--			<id>qa</id>-->
    <!--			<activation>-->
    <!--				<activeByDefault>false</activeByDefault>-->
    <!--			</activation>-->
    <!--			<build>-->
    <!--				<finalName>publiclink</finalName>-->
    <!--				<plugins>-->
    <!--					<plugin>-->
    <!--						<groupId>org.springframework.boot</groupId>-->
    <!--						<artifactId>spring-boot-maven-plugin</artifactId>-->
    <!--					</plugin>-->
    <!--				</plugins>-->
    <!--			</build>-->
    <!--			<properties>-->
    <!--            <activeProfile>qa</activeProfile>-->
    <!--        </properties>-->
    <!--		</profile>-->
    <!--	</profiles>-->

</project>
